todoapp: increased size of input on mobile to avoid zoom

--- a/todoapp/src/components/CreateTask.module.css
+++ b/todoapp/src/components/CreateTask.module.css
@@ -23,6 +23,12 @@
   padding-right: 3rem;
 }
 
+@media (max-width: 32em) {
+  .create__input {
+    font-size: 2.2rem;
+  }
+}
+
 .create__input::placeholder {
   color: var(--color-placeholder);
 }
